@@ -1,3 +1,6 @@
+20/12/2020
+-   Auto Prestige update
+
 8/12/2020
 -   More researches
 -   More ship modules
